--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Gloria</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -12,30 +15,44 @@
 
 <div class="navbar">
     <div class="links">
-      <a href="" class="link">La Carte</a>
-      <a href="" class="link">Réservation</a>
-      <a href="" class="link">Contact</a>
+        <a href="carte.html" class="link">La Carte</a>
+      <a href="reservation.html" class="link">Réservation</a>
+      <a href="Contact.html" class="link">Contact</a>
     </div>
+    <form class="navbar-search pull-left">
+  <input type="text" class="search-query" placeholder="Search">
+</form>
   </div>
 
 	<img src="devanture.jpeg"
-	alt="devanture">
+	alt="devanture" class="devanture">
 
 <h1>Gloria</h1>
-<h2>Élu les meilleures pizzas de Bordeaux</h2>
-<h3>Notre concept</h3>
+<h2>Élu les meilleures pizzas de Bordeaux !</h2>
+<div class="cadre-fin">
+<h3>Notre concept :)</h3>
 <p>La pizzeria personnalisable Gloria offre une expérience unique qui va au-delà de la simple dégustation de pizza. C'est un voyage culinaire où vous êtes le chef, et où chaque pizza est une création unique. Alors, laissez libre cours à votre imagination et rendez-vous dans une pizzeria personnalisable pour vivre une expérience gustative inoubliable. Buon appetito !</p>
+</div>
 
+<br>
+<br>
 
-  <div class="line-transparent">
-    <div class="line-hard"></div>
-    <div class="line-medium"></div>
-    <div class="line-light"></div>
+  <div class="images"> 
+    	<img src="four.jpg" class="four">
+    	<img src="pizza.jpg" class="four">
+    	<img src="cuisto.jpg" class="cuisto">
   </div>
 
+<br>
+<br>
 
-<h3>Dans nos cuisines</h3>
-<iframe width="966" height="543" src="https://www.youtube.com/embed/T3AHBe0I0yc" title="Pizza - Promo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<div class="cadre-cuisine">
+<h3>Dans nos cuisines...</h3>
+</div>
+<br>  
+<br>
+
+<iframe width="1420" height="543" src="https://www.youtube.com/embed/T3AHBe0I0yc" title="Pizza - Promo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </body>
 </html>
